welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: not found: value vuBiscuit
  while (vuBiscuit()!= false){
         ^Program:4: error: not found: value chercheBiscuit
    chercheBiscuit()}
    ^Program:5: error: not found: value vuBiscuit
  if (vuBiscuit()== true){
      ^Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vuBiscuit()== true){
  ^