welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  while (vuBiscuit()!= false){
  	return(false)
    chercheBiscuit()}
  if (vuBiscuit()== true){
    return(true)
  }
  }
  
